cmake_minimum_required(VERSION 3.26)
project(Algorithms)

set(CMAKE_CXX_STANDARD 17)

add_executable(Algorithms main.cpp
        2k/2475/boj_2475.cpp
        10k/10833/boj_10833.cpp
        2k/2475/boj_2475.cpp
        2k/2576/boj_2576.cpp
        10k/10828/boj_10828.cpp
        9k/9012/boj_9012.cpp
        )
